// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Choice Snapshots renders default 1`] = `
<Select
  className="objectlist-current-filter__active-status"
  getOptionLabel={[Function]}
  getOptionValue={[Function]}
  isMulti={false}
  loadOptions={undefined}
  onChange={[Function]}
  options={Array []}
  placeholder="Any value"
  value={44}
/>
`;

exports[`Choice Snapshots renders with custom label key 1`] = `
<Select
  className="objectlist-current-filter__active-status"
  getOptionLabel={[Function]}
  getOptionValue={[Function]}
  isMulti={false}
  loadOptions={undefined}
  onChange={[Function]}
  options={Array []}
  placeholder="Any value"
  value={44}
/>
`;

exports[`Choice Snapshots renders with custom option renderer 1`] = `
<Select
  className="objectlist-current-filter__active-status"
  components={
    Object {
      "Option": [Function],
    }
  }
  getOptionLabel={[Function]}
  getOptionValue={[Function]}
  isMulti={false}
  loadOptions={undefined}
  onChange={[Function]}
  options={Array []}
  placeholder="Any value"
  value={44}
/>
`;

exports[`Choice Snapshots renders with custom value key 1`] = `
<Select
  className="objectlist-current-filter__active-status"
  getOptionLabel={[Function]}
  getOptionValue={[Function]}
  isMulti={false}
  loadOptions={undefined}
  onChange={[Function]}
  options={Array []}
  placeholder="Any value"
  value={44}
/>
`;

exports[`Choice Snapshots renders with multiple choice 1`] = `
<Select
  className="objectlist-current-filter__active-status"
  getOptionLabel={[Function]}
  getOptionValue={[Function]}
  isMulti={true}
  loadOptions={undefined}
  onChange={[Function]}
  options={Array []}
  placeholder="Any value"
  value={44}
/>
`;

exports[`Choice Snapshots renders with options 1`] = `
<Select
  className="objectlist-current-filter__active-status"
  getOptionLabel={[Function]}
  getOptionValue={[Function]}
  isMulti={false}
  loadOptions={undefined}
  onChange={[Function]}
  options={
    Array [
      Object {
        "label": "One",
        "value": 1,
      },
    ]
  }
  placeholder="Any value"
  value={44}
/>
`;

exports[`Choice Snapshots renders with placeholder 1`] = `
<Select
  className="objectlist-current-filter__active-status"
  getOptionLabel={[Function]}
  getOptionValue={[Function]}
  isMulti={false}
  loadOptions={undefined}
  onChange={[Function]}
  options={Array []}
  placeholder="Testing testing"
  value={44}
/>
`;

exports[`Choice Snapshots renders with remote options 1`] = `
<div
  className="css-10nd86i objectlist-current-filter__active-status"
  id={undefined}
  onKeyDown={[Function]}
>
  <span
    aria-atomic="true"
    aria-live="polite"
    className="css-1uvvha"
    role="status"
  >
    0 results available.
  </span>
  <div
    className="css-1aya2g8 objectlist-current-filter__active-status__control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className="css-1rtrksz objectlist-current-filter__active-status__value-container"
    >
      <div
        className="css-1492t68 objectlist-current-filter__active-status__placeholder"
      >
        Any value
      </div>
      <div
        className="css-rsyb7x"
      >
        <div
          className="objectlist-current-filter__active-status__input"
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-activedescendant={undefined}
            aria-autocomplete="list"
            aria-busy={false}
            aria-describedby={undefined}
            aria-expanded={false}
            aria-haspopup={false}
            aria-label={undefined}
            aria-labelledby={undefined}
            aria-owns={undefined}
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            className={undefined}
            disabled={false}
            id="react-select-2-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-1wy0on6 objectlist-current-filter__active-status__indicators"
    >
      <span
        className="css-d8oujb objectlist-current-filter__active-status__indicator-separator"
        role="presentation"
      />
      <div
        className="css-1ep9fjw objectlist-current-filter__active-status__indicator objectlist-current-filter__active-status__dropdown-indicator"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        role="button"
      >
        <svg
          className="css-19bqh2r"
          focusable="false"
          height={20}
          role="presentation"
          viewBox="0 0 20 20"
          width={20}
        >
          <path
            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
